--- a/src/components/cards/registration/registration_card.pug
+++ b/src/components/cards/registration/registration_card.pug
@@ -2,19 +2,27 @@
     .registration_card_items 
         h1 Регистрация аккаунта
         form(action="")
-            include ../../form_elements/txt_field/txt_field
-            +txt_field("", "Имя")
-            +txt_field("", "Фамилия")
-            .registration_card_radio
-                include ../../form_elements/radio_button/radio_button
-                +radio_button("woman", "Женщина")
-                +radio_button("male", "Мужчина")
-            +txt_field("ДАТА РОЖДЕНИЯ", "Фамилия")
-            +txt_field("ДАННЫЕ ДЛЯ ВХОДА В СЕРВИС", "Email")
-            +txt_field("", "Пароль")
+            .registration_card_user_info
+                include ../../form_elements/txt_field/txt_field
+                +txt_field("", "Имя")
+                +txt_field("", "Фамилия")
+                .registration_card_radio
+                    include ../../form_elements/radio_button/radio_button
+                    +radio_button("woman", "Женщина")
+                    +radio_button("male", "Мужчина")
+                +txt_field("ДАТА РОЖДЕНИЯ", "Фамилия")
+            .registration_card_login_info
+                +txt_field("ДАННЫЕ ДЛЯ ВХОДА В СЕРВИС", "Email")
+                +txt_field("", "Пароль")
             .registration_card_toogle
                 include ../../form_elements/toogle/toogle
-                +toogle("Получать спецпредложения")
+                +toogle("")
+                p Получать спецпредложения
+            .regi_card_login
+                p Уже есть аккаунт на Toxin
+                include ../../form_elements/buttons/buttons
+                .regi_button
+                    +button("ВОЙТИ", "no_bg")
 
 
 
