--- a/src/components/form_elements/toogle/toogle.scss
+++ b/src/components/form_elements/toogle/toogle.scss
@@ -3,6 +3,7 @@
     font-size: 12px;
     line-height: 24px;
     color: rgba(31, 32, 65, 0.75);
+    display:inline-flex;
 }
 input[type=checkbox].toogle {
     display: none;
