--- a/src/pages/room_detailes/room_detailes.scss
+++ b/src/pages/room_detailes/room_detailes.scss
@@ -17,7 +17,7 @@
 h2 {
     @include highlight_style()
 }
-.room_info{
+.room_detailes_info{
     width: 291px;
     height: 273px;
     display: flex;
@@ -38,3 +38,33 @@ h2 {
     }
 }
 }
+
+.room_detailes_impressions_diagram {
+    width: 120px;
+    height: 121px;
+    overflow: hidden;
+    border-radius: 50%;
+    position: relative;
+  }
+  
+  .diagram-sector {
+    width: 50%;
+    height: 50%;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform-origin: left bottom;
+  }
+  
+  .room_detailes_impressions_diagram:after {
+    content: '260 голосов';
+    text-align: center;
+    position: absolute;
+    width: 92%;
+    height: 92%;
+    background: #fff;
+    border-radius: 50%;
+    top: 4%;
+    left: 4%;
+  }
+  
