--- a/src/pages/room_detailes/room_detailes.scss
+++ b/src/pages/room_detailes/room_detailes.scss
@@ -57,7 +57,13 @@ h2 {
   }
   
   .room_detailes_impressions_diagram:after {
-    content: '260 голосов';
+    content: '260 \A голосов';
+    font-family: 'Montserrat' sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    color: #BC9CFF;
+    white-space: pre;
     text-align: center;
     position: absolute;
     width: 92%;
@@ -66,5 +72,24 @@ h2 {
     border-radius: 50%;
     top: 4%;
     left: 4%;
+  }
+  .room_detailes_impressions_diagram::after::first-word {
+      font-size: 24px;
+      line-height: 29px;
+  }
+  .room_detailes_impressions_list {
+      float: left;
+      > ul {
+          @include font_style()
+      }
+        li {
+            list-style-type: none;
+          }
+        li::before {
+            content: "";
+            width: 10px;
+            height: 10px;
+        }
+      
   }
   
