--- a/src/components/form_elements/like_button/like_button.pug
+++ b/src/components/form_elements/like_button/like_button.pug
@@ -1,4 +1,4 @@
-mixin like_button
+mixin like_button(number)
     button.like_button 
-        span.like_button_span 12
+        span.like_button_span=number
     
