--- a/src/pages/room_detailes/room_detailes.pug
+++ b/src/pages/room_detailes/room_detailes.pug
@@ -4,6 +4,16 @@ mixin room_info(image_name, high, description)
         .room_info_txt
             p.room_info_high=high
             p.room_info_description=description
+mixin user_comment(user_name, time, comment, number)
+    .room_detailes_comment 
+                img(src="", alt="", srcset="") 
+                .user 
+                    p=user_name
+                    p=time 
+                .comment 
+                    include ../../components/form_elements/like_button/like_button.pug 
+                    +like_button(number)
+                    p=comment
 
 doctype html
 html(lang="en")
@@ -19,23 +29,31 @@ html(lang="en")
     body 
         include ../../components/headers_footers/authorized_user_header/authorized_user_header
         .room_detailes_images
+            img.bg_1(src="img/bg_1.png", alt="", srcset="")
+            .small_room_img
+                img.bg_2(src="img/bg_2.png", alt="", srcset="")
+                img.bg_3(src="img/bg_3.png", alt="", srcset="")
         .room_detailes_info
-            h2 Сведения о номере
-            +room_info("comfort", "Комфорт", "Шумопоглощающие стены")
-            +room_info("convenience", "Удобство", "Окно в каждой из спален")
-            +room_info("cosiness", "Уют", "Номер оснащен камином")
-        .room_detailes_impressions
-            h2 Впечатления от номера
-            .room_detailes_impressions_diagram
-                canvas(id="circle")
-                    span some text
-            .room_detailes_impressions_list 
-                ul
-                    each item, number in {1: "Великолепно", 2: "Хорошо", 3: "Удовлетворительно", 4: "Разочарован"}
-                        li(class="li_item"+number)= item
+            .room_detailes_room_info
+                h2.info Сведения о номере
+                +room_info("comfort", "Комфорт", "Шумопоглощающие стены")
+                +room_info("convenience", "Удобство", "Окно в каждой из спален")
+                +room_info("cosiness", "Уют", "Номер оснащен камином")
+            .room_detailes_impressions
+                h2.impressions Впечатления от номера
+                .room_detailes_impressions_diagram
+                    canvas(id="circle")
+                        span some text
+                .room_detailes_impressions_list 
+                    ul
+                        each item, number in {1: "Великолепно", 2: "Хорошо", 3: "Удовлетворительно", 4: "Разочарован"}
+                            li(class="li_item"+number)= item
         .room_detailes_comments
-        .room_detailes_card 
-            include ../../components/cards/checkout/checkout_card
+            p.comments Отзывы посетителей номера
+            +user_comment("Мурад Сарафанов", "5 дней назад", "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.", "12")
+        //- .room_detailes_card 
+        //-     include ../../components/cards/checkout/checkout_card
+    
 
             
 
