change landing page

--- a/src/pages/landing_page/landing_page.pug
+++ b/src/pages/landing_page/landing_page.pug
@@ -12,4 +12,12 @@ html(lang="ru")
     body 
         include ../../components/headers_footers/authorized_user_header/authorized_user_header
         .landing_page_content
+            .landing_page_card
+                include ../../components/cards/date/date_card
+            .landing_page_text
+                p Лучшие номера для вашей работы, 
+                p отдыха и просто вдохновения
+
+
+           
             
