--- a/src/pages/room_detailes/room_detailes.pug
+++ b/src/pages/room_detailes/room_detailes.pug
@@ -54,7 +54,7 @@ html(lang="en")
                                         li(class="li_item"+number)= item
                     .room_detailes_comments
                         p.comments Отзывы посетителей номера
-                        +user_comment("Мурад Сарафанов", "5 дней назад", "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.", "12", "user_photo_1")
+                        +user_comment("Мурад Сарафанов", "5 дней назад", "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.", "11", "user_photo_1")
                         +user_comment("Патрисия Стёклышкова", "Неделю назад", "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент", "2", "user_photo_2")
 
                 .room_detailes_card 
@@ -72,6 +72,8 @@ html(lang="en")
                 p этого при отмене не позднее чем за 5 дн. до 
                 p прибытия вы получите полный возврат за 
                 p вычетом сбора за услуги.
+        include ../../components/headers_footers/footer/footer
+        
             
     
 
