--- a/src/components/cards/room/slider.scss
+++ b/src/components/cards/room/slider.scss
@@ -1,7 +1,8 @@
 .nslider {
-    width: 270px;
+    width: 257.5px;
     height: 151.38px;
     background-color: #e2e2e2;
+    border-radius: 4px;
 }
 .nslider .nslider-button {
     display: none;
