--- a/src/components/form_elements/rate_button/rate_button.scss
+++ b/src/components/form_elements/rate_button/rate_button.scss
@@ -12,7 +12,7 @@
     background-size:  100%;
     background-repeat: no-repeat;
     border: none;
-    margin-right: 9.74px;
+    //margin-right: 2px;
     width: 20px;
     height: 20px;
 
@@ -24,7 +24,7 @@
     background-size:  100%;
     background-repeat: no-repeat;
     border: none;
-    margin-right: 9.74px;
+    //margin-right: 2px;
     width: 20px;
     height: 20px;
 }
