--- a/src/components/headers_footers/footer/footer.pug
+++ b/src/components/headers_footers/footer/footer.pug
@@ -6,7 +6,7 @@ mixin footer_list(h3, footer_item_1, footer_item_2, footer_item_3, footer_item_4
     a.footer_item=footer_item_4
 
 footer 
-    container.footer_container
+    .footer_container
         .footer_logos 
             .footer_logo
                 img(src=require("/src/asserts/img/Logo.svg"))
