--- a/src/components/headers_footers/footer/footer.scss
+++ b/src/components/headers_footers/footer/footer.scss
@@ -16,6 +16,9 @@
     color: rgba(31, 32, 65, 0.75);
     margin: 0;
 }
+footer {
+    height: 443px;
+}
 .footer_container {
     display: flex;
     flex-direction: row;
