--- a/src/pages/search_room/search_room.scss
+++ b/src/pages/search_room/search_room.scss
@@ -3,6 +3,7 @@
     font-size: 12px;
     color: rgba(31, 32, 65, 0.5);
 }
+
 aside {
     float: left;
     display: flex;
@@ -10,6 +11,7 @@ aside {
     width: 266px;
     margin-left: 140px;
     margin-top: 30px;
+    margin-right: 60px;
     .masked_txt_field_input_label {
         input {
         width: 266px;
@@ -44,14 +46,16 @@ aside {
     max-width: 222px;
 }
 content {
-    float: left;
-    margin-top: 30px;
-    margin-left: 59px;
+    width: 846px;
+    h1 {
+        margin-top: 30px;
+    }
 }
 .search_room_items {
     width: 846px;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 59px;
     .room_card {
         margin-left: 12px;
         margin-bottom: 20px;
