--- a/src/components/cards/date/date_card.pug
+++ b/src/components/cards/date/date_card.pug
@@ -1,8 +1,8 @@
 .date_card
     .date_card_items
         .date_card_txt
-            p Найдем номера под 
-            p ваши пожелания 
+            h1 Найдем номера под 
+            h1 ваши пожелания 
         include ../../form_elements/date_dropdown/date_dropdown         
         +date_dropdown("ВЬЕЗД","ВЫЕЗД")
         include ../../form_elements/dropdown/dropdown 
