--- a/src/components/cards/date/date_card.scss
+++ b/src/components/cards/date/date_card.scss
@@ -1,5 +1,5 @@
 @mixin form_style{
-    font-family: 'Montserrat Bold' sans-serif;
+    font-family: 'Montserrat Bold';
     color: #1F2041;
     font-weight: bold;
 } 
@@ -18,12 +18,10 @@
         width: 320px;
     > .date_card_txt {
         padding-bottom: 21px;
-        >p {
-            @include form_style;
-            font-size: 24px;
-            line-height: 29px;
-            margin: 0;
-        } 
+        // >h1 {
+        //     // font-weight: 800;
+        //     // margin: 0;
+        // } 
     }
 }
 }
