--- a/src/components/cards/checkout/checkout_card.scss
+++ b/src/components/cards/checkout/checkout_card.scss
@@ -1,9 +1,9 @@
 @mixin checkout_txt_style {
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     font-weight: bold;
 }
 @mixin checkout_room_cost_txt_style {
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     color: #1F2041;
     opacity: 75%;
     font-size: 14px;
