--- a/src/components/form_elements/buttons/buttons.scss
+++ b/src/components/form_elements/buttons/buttons.scss
@@ -3,7 +3,7 @@
     height: 44px; 
     border-radius: 22px;
     > p {
-        font-family: 'Montserrat' sans-serif;
+        font-family: 'Montserrat';
         font-size: 12px;
         font-weight: 700;
         margin: 0;
