--- a/src/components/form_elements/like_button/like_button.scss
+++ b/src/components/form_elements/like_button/like_button.scss
@@ -8,7 +8,7 @@
     background-size: 10px 8px;
     background-repeat: no-repeat;
     background-position: top 5px left 5px;
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     font-size: 10px;
     color: rgba(31, 32, 65, 0.25);
     padding-left: 18px;
