--- a/src/components/form_elements/toogle/toogle.scss
+++ b/src/components/form_elements/toogle/toogle.scss
@@ -1,5 +1,5 @@
 .toogle_label {
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     font-size: 12px;
     line-height: 24px;
     color: rgba(31, 32, 65, 0.75);
