--- a/src/components/headers_footers/authorized_user_header/authorized_user_header.scss
+++ b/src/components/headers_footers/authorized_user_header/authorized_user_header.scss
@@ -23,14 +23,14 @@ menu {
 }
 .menu_item {
     text-decoration: none;
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     font-size: 14px;
     color: rgba(31, 32, 65, 0.5);
     line-height: 17px;
     margin-top: 32px;
 }
 .menu_item:hover {
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     font-weight: bold;
     color: rgba(31, 32, 65, 0.75);
 }
