--- a/src/pages/landing_page/landing_page.scss
+++ b/src/pages/landing_page/landing_page.scss
@@ -14,7 +14,7 @@
     margin-right: 134px;
     margin-top: 320px;
     p {
-        font-family: 'Montserrat Bold' sans-serif;
+        font-family: 'Montserrat Bold';
         color: rgba(31, 32, 65, 0.75);
         font-style: normal;
         font-weight: normal;
