--- a/src/components/cards/login/login_card.scss
+++ b/src/components/cards/login/login_card.scss
@@ -1,5 +1,5 @@
 @mixin form_style{
-    font-family: 'Montserrat Bold' sans-serif;
+    font-family: 'Montserrat Bold';
     color: #1F2041;
     font-weight: bold;
     font-size: 24px;
