--- a/src/components/form_elements/checkbox/checkbox.scss
+++ b/src/components/form_elements/checkbox/checkbox.scss
@@ -1,5 +1,5 @@
 @mixin label {
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     font-size: 14px;
     border-color: #1f2041;
     opacity: 50%;
