--- a/src/components/form_elements/dropdown/dropdown.scss
+++ b/src/components/form_elements/dropdown/dropdown.scss
@@ -32,7 +32,7 @@ div.NCS.parent {
     padding: none;
 }
 a.NCS.close {
-    font-family: 'Montserrat Bold' sans-serif;
+    font-family: 'Montserrat Bold';
     font-size: 12px;
     color: #bc9cff;
     text-decoration: none;
