--- a/src/components/form_elements/rich_checkbox_button/rich_checkbox_button.scss
+++ b/src/components/form_elements/rich_checkbox_button/rich_checkbox_button.scss
@@ -1,5 +1,5 @@
 .rich_checkbox_label {
-    font-family: "Montserrat Bold" sans-serif;
+    font-family: "Montserrat Bold";
     font-weight: bold;
     font-size: 14px;
     line-height: 18px;
@@ -40,7 +40,7 @@
     margin-right: 10px;
 }
 .rich_checkbox_description {
-    font-family: "Montserrat" sans-serif;
+    font-family: "Montserrat";
     font-size: 12px;
     line-height: 14px;
     color: rgba(31, 32, 65, 0.5);
