--- a/src/components/form_elements/txt_field/txt_field.scss
+++ b/src/components/form_elements/txt_field/txt_field.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
 }
 @mixin input_text_style {
-    font-family: 'Montserrat Bold' sans-serif;
+    font-family: 'Montserrat Bold';
     color: #1F2041;
 }
 .txt_field_input_label {
