--- a/src/components/headers_footers/footer/footer.scss
+++ b/src/components/headers_footers/footer/footer.scss
@@ -3,14 +3,14 @@
     flex-direction: column;
 }
 @mixin footer_item {
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     font-size: 14px;
     line-height: 17px;
     color: rgba(31, 32, 65, 0.5);
     margin-top: 20px;    
 }
 @mixin footer_text {
-    font-family: 'Montserrat' sans-serif;
+    font-family: 'Montserrat';
     font-size: 14px;
     line-height: 24px;
     color: rgba(31, 32, 65, 0.75);
@@ -48,7 +48,7 @@ footer {
     margin-left: 92px;
 }
 h3 {
-    font-family: 'Montserrat Bold' sans-serif;
+    font-family: 'Montserrat Bold';
     font-weight: bold;
     font-size: 12px;
     line-height: 15px;
