--- a/src/pages/room_detailes/room_detailes.scss
+++ b/src/pages/room_detailes/room_detailes.scss
@@ -1,5 +1,5 @@
 @mixin font_style {
-    font-family: 'Montserrat Bold' sans-serif;
+    font-family: 'Montserrat Bold';
     color: rgba(31, 32, 65, 0.75);
     font-style: normal;
     font-weight: normal;
@@ -8,7 +8,7 @@
     margin: 0;
 }
 @mixin highlight_style {
-    font-family: 'Montserrat Bold' sans-serif;
+    font-family: 'Montserrat Bold';
     font-size: 19px;
     font-weight: bold;
     color: #1f2041;
