--- a/src/pages/search_room/search_room.scss
+++ b/src/pages/search_room/search_room.scss
@@ -1,5 +1,5 @@
 @mixin text_style {
-    font-family: "Montsserat" sans-serif;
+    font-family: "Montsserat";
     font-size: 12px;
     color: rgba(31, 32, 65, 0.5);
 }
